--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
+    "buffer": "^6.0.3",
+    "ipfs-http-client": "^50.1.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-bootstrap-form": "^0.1.4-beta6",
